Added a few updates.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Rachel Aidoo | WDD 130</title>
+        <meta name="description" content="Rachel Aidoo, BYU-Idaho WDD 130 course home page">
+        <meta name="author" content="Rachel Aidoo">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
@@ -18,6 +20,11 @@
             <img src="images/profile.jpg" alt="Hello, my name is Rachel Aidoo" width="200">
             <p>Hello! My name is Rachel Aidoo and I am from Kumasi Ashante region in Ghana. I love art</p>
         </main>
+        <aside>
+            <h2>Ghana</h2>
+            <img src="images/ghanain culture and flag.jpg" alt="ghanain culture and flag held by our tribes">
+            <p>Ghana is in the western part of Africa. Ghana is known for its production of cocoa, which I love the chocolate made form it. It has 16 regions and 79 different spoken languages and dialects. We have over 90 ethnic groups and multiple cultures.</p>
+        </aside>
         <footer>
             <p>©2024 🌴 Rachel Aidoo 🌴 Kumasi, Ghana</p>
         </footer>
