Corrected the mistake I made

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         </main>
         <aside>
             <h2>Ghana</h2>
-            <img src="images/ghanain culture and flag.jpg" alt="ghanain culture and flag held by our tribes">
+            <img src="images/ghanain-culture-and-flag.jpg" alt="ghanain culture and flag held by our tribes">
             <p>Ghana is in the western part of Africa. Ghana is known for its production of cocoa, which I love the chocolate made form it. It has 16 regions and 79 different spoken languages and dialects. We have over 90 ethnic groups and multiple cultures.</p>
         </aside>
         <footer>
             <p>©2024 🌴 Rachel Aidoo 🌴 Kumasi, Ghana</p>
         </footer>
-    <body>
+    </body>
 </html>
