--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <img src="images/rsz-logo2-200.jpg" alt="Rafting Site Logo">
+            <img src="images/logo2-200.jpg" alt="Rafting Site Logo">
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -23,10 +23,10 @@
         </header>
         <main>
             <div class="hero">
-                <img src="heroimage.jpg" alt="Rafting Awaits!" width="200">
+                <img src="images/heroimage.jpg" alt="Rafting Awaits!" width="200">
                 <h1>Rae's Adventurous Rafting</h1>
                 <article>
-                    <img src="rsz-happy-clients.jpg" alt="Happy-clients">
+                    <img src="images/happy-clients.jpg" alt="Happy-clients">
                     <p>Lorem ipsum dolor sit amet consectetur ...</p>
                 </article>
             </div>
