Updating raft site

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -10,14 +10,14 @@
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
     <body>
-        <header>
+        <header class="header">
             <img src="images/logo2-200.jpg" alt="Rafting Site Logo">
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li><a href="trips.html">Trips</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
         </header>
@@ -30,24 +30,41 @@
                     <p>Lorem ipsum dolor sit amet consectetur ...</p>
                 </article>
             </div>
-            <section>
+            <section class="history">
                 <h2>History</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing ...</p>
             </section>
-            <section>
+            <section class="adventures">
                 <h2>Adventure Awaits You!</h2>
-                <img src="images/rafting1.jpg" alt="Rafting Adventure 1" width="200">
-                <img src="images/rafting2.jpg" alt="Rafting Adventure 2" width="200">
-                <img src="images/rafting3.jpg" alt="Rafting Adventure 3" width="200">
-                <img src="images/rafting4.jpg" alt="Rafting Adventure 4" width="200">
-                <img src="images/rafting5.jpg" alt="Rafting Adventure 5" width="200">             
+                <figure>
+                    <img src="images/rafting1.jpg" alt="Rafting Adventure 1" width="200">
+                    <figcaption>Rafting Adventure 1</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting2.jpg" alt="Rafting Adventure 2" width="200">
+                    <figcaption>Rafting Adventure 2</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting3.jpg" alt="Rafting Adventure 3" width="200">
+                    <figcaption>Rafting Adventure 3</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting4.jpg" alt="Rafting Adventure 4" width="200">
+                    <figcaption>Rafting Adventure 4</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting5.jpg" alt="Rafting Adventure 5" width="200">
+                    <figcaption>Rafting Adventure 5</figcaption>
+                </figure>             
             </section>
         </main>
-        <footer>
-            <p>©2024, Rae's Adventurous Rafting, Rachel Aidoo</p>
-            <a href="https://www.facebook.com" target="_blank"><img  src="images/facebook-icon.png" alt="Facebook" width="30"></a>
-            <a href="https://www.twitter.com" target="_blank"><img src="images/twitter-icon.png" alt="Twitter" width="30"></a>
-            <a href="https://www.instagram.com" target="_blank"><img src="images/instagram-icon.png" alt="Instagram" width="30"></a>       
+        <footer class="footer">
+            <div>
+                <p>©2024, Rae's Adventurous Rafting, Rachel Aidoo</p>
+                <a href="https://www.facebook.com" target="_blank"><img  src="images/facebook-icon.png" alt="Facebook" width="30"></a>
+                <a href="https://www.twitter.com" target="_blank"><img src="images/twitter-icon.png" alt="Twitter" width="30"></a>
+                <a href="https://www.instagram.com" target="_blank"><img src="images/instagram-icon.png" alt="Instagram" width="30"></a>  
+            </div>       
         </footer>
     </body>
 </html>
