--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>About Us - White Water Rafting</title>
+        <meta name="description" content="Rachel Aidoo, White Water Rafting">
+        <meta name="author" content="Rachel Aidoo">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
