made some changes

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
     <body>
-        <header class="header">
+        <header>
             <img src="images/logo2-200.jpg" alt="Rafting Site Logo">
             <nav>
                 <ul>
@@ -60,7 +60,7 @@
                 </figure>             
             </section>
         </main>
-        <footer class="footer">
+        <footer>
             <div>
                 <p>©2024, Rae's Adventurous Rafting, Rachel Aidoo</p>
                 <a href="https://www.facebook.com" target="_blank"><img  src="images/facebook-icon.png" alt="Facebook" width="30"></a>
